[fix] navbar overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ html {
 
 body {
     font-family: "Geist", sans-serif;
+    overflow-x: hidden;
 }
 
 @layer base {
